Update templates, refactor CSS, add site logo

--- a/core/templates/admin_upload.html
+++ b/core/templates/admin_upload.html
@@ -4,6 +4,7 @@
 <head>
     <title>Upload PDF</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="images/logo.webp" href="{% static 'images/logo.webp' %}">
 </head>
 <body>
 
