--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -12,6 +12,7 @@
       name="keywords"
       content="Amba Pande, Scholar, Indian Diaspora, Migration Studies, Gender Studies, International Studies"
     />
+    <link rel="icon" type="images/logo.webp" href="{% static 'images/logo.webp' %}">
     <meta name="author" content="Dr. Amba Pande" />
     <title>Dr. Amba Pande | Academic Portfolio</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -335,7 +336,6 @@
   </div>
   {% endfor %}
 </section>
-
 
 
     <!-- ================= PUBLICATIONS (COLLAPSIBLE) ================= -->
