--- a/core/templates/admin_dashboard.html
+++ b/core/templates/admin_dashboard.html
@@ -4,8 +4,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Admin Dashboard | Amba Pande</title>
+    <title>Admin Dashboard | Dr. Amba Pande</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="icon" type="images/logo.webp" href="{% static 'images/logo.webp' %}">
     <link
       href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
       rel="stylesheet"
