--- a/core/templates/admin_edit_pdf.html
+++ b/core/templates/admin_edit_pdf.html
@@ -4,6 +4,7 @@
 <head>
 <title>Edit PDF</title>
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="icon" type="images/logo.webp" href="{% static 'images/logo.webp' %}">
 </head>
 <body>
 
