--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Dr. Amba Pande</title>
-
+    <link rel="icon" type="images/logo.webp" href="{% static 'images/logo.webp' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
