Update templates, refactor CSS, add site logo

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -256,6 +256,10 @@
           <em>Project:</em> “The Role of the Indian Diaspora in
           India–Netherlands Relations”
         </li>
+        <li>
+          <strong>Co- supervising a PhD thesis on ‘Conditions of Indians in Mauritius: 1885-1920'</strong><br/>
+          Being conducted at the University of Lucknow under Prof Archana Tiwari
+        </li>
       </ul>
     </section>
 
