--- a/static/css/style.css
+++ b/static/css/style.css
@@ -258,6 +258,24 @@ footer {
   font-weight: 600;
   font-size: 13px;
 }
+.password-wrapper {
+  position: relative;
+}
+
+.password-wrapper input {
+  width: 100%;
+  padding-right: 40px;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  user-select: none;
+  font-size: 16px;
+}
 
 .auth-form input {
   width: 100%;
