Changes of Login and Register

--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -29,6 +29,7 @@
       </p>
 
       <form class="auth-form" id="registerForm">
+         {% csrf_token %}
         <label>Name</label>
         <input type="text" id="name" placeholder="Your Full Name" required />
 
